--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -10,7 +10,8 @@
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
+    "lint:fix": "yarn lint --fix",
     "precommit": "npm run lint",
     "test": "jest",
     "post-update": "yarn upgrade --latest"
@@ -27,11 +28,8 @@
     "dayjs": "^1.8.9",
     "graphql-tag": "^2.10.1",
     "koa": "^2.6.2",
-    "mavon-editor": "^2.6.17",
-    "normalize.css": "^8.0.1",
     "nuxt": "^2.6.1",
     "push.js": "^1.0.9",
-    "scrollmagic": "^2.0.6",
     "scrollreveal": "^4.0.5",
     "spark-md5": "^3.0.0",
     "tinymce": "^5.0.1",
@@ -42,12 +40,13 @@
   "devDependencies": {
     "@nuxt/typescript": "^2.6.3",
     "@nuxtjs/eslint-config": "^0.0.1",
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.7.1",
     "babel-plugin-import": "^1.11.0",
-    "eslint": "^5.0.1",
+    "eslint": "^6.0.0-alpha.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-config-standard": ">=12.0.0",
     "eslint-loader": "^2.0.0",
@@ -63,7 +62,6 @@
     "less-loader": "^4.1.0",
     "nodemon": "^1.18.9",
     "prettier": "1.17.0",
-    "tslint-config-standard": "^8.0.1",
     "vue-jest": "^3.0.2"
   }
 }
