--- a/website/thoper/package.json
+++ b/website/thoper/package.json
@@ -25,7 +25,7 @@
     "@babel/polyfill": "^7.0.0",
     "@nestjs/common": "^6.1.1",
     "@nestjs/core": "^6.1.1",
-    "@nestjs/platform-express": "^6.1.1",
+    "@nestjs/platform-fastify": "^6.1.1",
     "antd-mobile": "^2.2.13",
     "cache-manager": "^2.9.0",
     "dotenv": "^8.0.0",
@@ -58,6 +58,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/styled-components": "^4.1.14",
     "@types/supertest": "^2.0.5",
+    "@zeit/next-less": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "babel-plugin-css-modules-transform": "^1.6.2",
     "babel-plugin-import": "^1.11.0",
@@ -67,9 +68,9 @@
     "jest": "^24.8.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "less-vars-to-js": "^1.3.0",
     "nodemon": "^1.19.0",
     "prettier": "^1.14.2",
-    "style-loader": "^0.23.1",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.0",
