--- a/website/thoper/package.json
+++ b/website/thoper/package.json
@@ -29,7 +29,6 @@
     "antd-mobile": "^2.2.13",
     "cache-manager": "^2.9.0",
     "dotenv": "^8.0.0",
-    "http-proxy-middleware": "^0.19.1",
     "joi": "^14.0.0",
     "nest-next": "^0.7.0",
     "next": "8.1.0",
@@ -38,7 +37,6 @@
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
-    "tslint-react": "^4.0.0",
     "vditor": "^1.3.5"
   },
   "devDependencies": {
@@ -61,20 +59,22 @@
     "@zeit/next-typescript": "^1.1.1",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-module-resolver": "^3.2.0",
-    "css-loader": "^2.1.1",
     "jest": "^24.8.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "less-vars-to-js": "^1.3.0",
     "nodemon": "^1.19.0",
     "prettier": "^1.14.2",
+    "style-loader": "^0.23.1",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.0",
     "ts-node": "^8.1.0",
     "tsconfig-paths": "^3.5.0",
     "tslint": "5.16.0",
-    "typescript": "^3.0.1"
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.0.1",
+    "typings-for-css-modules-loader": "^1.7.0"
   },
   "jest": {
     "moduleNameMapper": {
