--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 .idea
 node_modules
-.idea
+
 target
 *.iml
-.nuxt
+
 logs
 .gradle
-nohup.out
+
 # Created by .ignore support plugin (hsz.mobi)
 ### Node template
 # Logs
-logs
+
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -66,7 +66,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+#.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -94,6 +94,6 @@ upload
 *.db
 
 nginx-*
-/zther/rhoper/Cargo.lock
-/website/vhoper/yarn.lock
-/micro/main/main
+*.lock
+*.sum
+micro/main/main
