--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.8.9",
     "graphql-tag": "^2.10.1",
     "koa": "^2.6.2",
+    "mavon-editor": "^2.6.17",
     "nuxt": "^2.6.1",
     "push.js": "^1.0.9",
     "scrollmagic": "^2.0.6",
