--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -27,6 +27,7 @@
     "graphql-tag": "^2.10.1",
     "koa": "^2.6.2",
     "mavon-editor": "^2.7.3",
+    "normalize.css": "^8.0.1",
     "nuxt": "^2.6.1",
     "push.js": "^1.0.9",
     "scrollmagic": "^2.0.6",
