--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -17,18 +17,15 @@
     "post-update": "yarn upgrade --latest"
   },
   "dependencies": {
-    "@nuxtjs/apollo": "^4.0.0-rc6",
+    "@nuxtjs/apollo": "4.0.0-rc6",
     "@nuxtjs/axios": "^5.5.3",
     "@nuxtjs/pwa": "^3.0.0-beta.16",
-    "ant-design-vue": "^1.3.9",
-    "apollo-link-http": "^1.5.11",
+    "ant-design-vue": "1.3.8",
     "cross-env": "^5.2.0",
-    "dayjs": "^1.8.14",
-    "graphql-tag": "^2.10.1",
-    "koa": "^2.6.2",
-    "mavon-editor": "^2.7.3",
+    "koa": "^2.7.0",
+    "mavon-editor": "^2.7.4",
     "normalize.css": "^8.0.1",
-    "nuxt": "^2.8.0",
+    "nuxt": "^2.8.1",
     "push.js": "^1.0.9",
     "scrollmagic": "^2.0.7",
     "spark-md5": "^3.0.0",
@@ -38,21 +35,21 @@
     "vue-virtual-scroller": "^1.0.0-rc.2"
   },
   "devDependencies": {
-    "@nuxt/typescript": "^2.8.0",
+    "@nuxt/typescript": "^2.8.1",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@vue/test-utils": "^1.0.0-beta.27",
-    "babel-core": "7.0.0-bridge.0",
+    "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-core": "^7.0.0-alpha.20",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "babel-plugin-import": "^1.12.0",
-    "eslint": "^5.16.0",
+    "eslint": "6.0.0-alpha.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-config-standard": ">=12.0.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": ">=2.17.3",
-    "eslint-plugin-jest": ">=22.6.4",
-    "eslint-plugin-node": ">=9.1.0",
-    "eslint-plugin-prettier": "3.1.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": ">=2.14.0",
+    "eslint-plugin-jest": ">=21.24.1",
+    "eslint-plugin-node": ">=9.0.1",
+    "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-promise": ">=4.0.1",
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.0.0",
@@ -60,7 +57,7 @@
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "nodemon": "^1.19.1",
-    "prettier": "1.17.1",
+    "prettier": "^1.17.1",
     "vue-jest": "^3.0.2"
   }
 }
