--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -20,7 +20,7 @@
     "@nuxtjs/apollo": "4.0.0-rc6",
     "@nuxtjs/axios": "^5.5.3",
     "@nuxtjs/pwa": "^3.0.0-beta.16",
-    "ant-design-vue": "1.3.8",
+    "ant-design-vue": "^1.3.9",
     "cross-env": "^5.2.0",
     "koa": "^2.7.0",
     "mavon-editor": "^2.7.4",
