--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -38,7 +38,8 @@
     "@nuxt/typescript": "^2.8.1",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@vue/test-utils": "^1.0.0-beta.29",
-    "babel-core": "^7.0.0-alpha.20",
+    "@babel-core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "babel-plugin-import": "^1.12.0",
