--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -168,21 +168,21 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-#        location /actix {
-#            proxy_pass  http://127.0.0.1:8002;
-#            proxy_set_header Host $host;
-#            proxy_set_header X-Real-IP $remote_addr;
-#            proxy_set_header X-Real-PORT $remote_port;
-#            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#        }
+        location /actix {
+            proxy_pass  http://127.0.0.1:8002;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Real-PORT $remote_port;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
 
-#        location /spring {
-#            proxy_pass  http://127.0.0.1:8080;
-#            proxy_set_header Host $host;
-#            proxy_set_header X-Real-IP $remote_addr;
-#            proxy_set_header X-Real-PORT $remote_port;
-#            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#        }
+        location /spring {
+            proxy_pass  http://127.0.0.1:8003;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Real-PORT $remote_port;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
 
         location /ws {
 	        proxy_pass http://127.0.0.1:8000;
@@ -221,3 +221,5 @@ http {
     }
 
 }
+
+include tcp.conf;
