--- a/zther/rhoper/Cargo.toml
+++ b/zther/rhoper/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["贾一饼 <lby.i@qq.com>"]
 edition = "2018"
 
 [dependencies]
-actix-web = { git = "https://github.com/actix/actix-web" }
+actix-web = { version = "1.0.0" }
 actix = { version = "0.8.1", features = ["http"] }
 actix-rt = "0.2.2"
 actix-files = "0.1.0-beta.1"
