--- a/zther/rhoper/Cargo.toml
+++ b/zther/rhoper/Cargo.toml
@@ -3,12 +3,14 @@ name = "rhoper"
 version = "0.1.0"
 authors = ["贾一饼 <lby.i@qq.com>"]
 edition = "2018"
+description = "还没掌握框架就着急模仿示例，最后难以驾驭，从新开始"
 
 [dependencies]
-actix-web = { version = "1.0.0" }
+actix-web = { version = "1.0.2" }
 actix = { version = "0.8.1", features = ["http"] }
 actix-rt = "0.2.2"
-actix-files = "0.1.0-beta.1"
+actix-files = "0.1.1"
+actix-session = "0.1.0"
 bcrypt = "0.2.1"
 chrono = { version = "0.4.6", features = ["serde"] }
 diesel = { version = "1.3.3", features = ["postgres", "uuid", "r2d2", "chrono"] }
