--- a/zther/rhoper/Cargo.toml
+++ b/zther/rhoper/Cargo.toml
@@ -11,18 +11,18 @@ actix = { version = "0.8.3", features = ["http"] }
 actix-rt = "0.2.2"
 actix-files = "0.1.2"
 actix-session = "0.1.1"
-bcrypt = "0.4.0"
+#bcrypt = "0.4.0"
 chrono = { version = "0.4.6", features = ["serde"] }
-diesel = { version = "1.4.2", features = ["postgres", "uuid", "r2d2", "chrono"] }
+#diesel = { version = "1.4.2", features = ["postgres", "uuid", "r2d2", "chrono"] }
 dotenv = "0.14.1"
-derive_more = "0.15.0"
+#derive_more = "0.15.0"
 env_logger = "0.6.1"
-jsonwebtoken = "6.0.1"
+#jsonwebtoken = "6.0.1"
 futures = "0.1.27"
-r2d2 = "0.8.5"
+#r2d2 = "0.8.5"
 serde_derive="1.0.92"
 serde_json="1.0.39"
 serde="1.0.92"
-sparkpost = "0.5.2"
+#sparkpost = "0.5.2"
 uuid = { version = "0.7.4", features = ["serde", "v5"] }
 bytes = "0.4.12"
