--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -177,7 +177,25 @@ http {
         }
 
         location /spring {
-            proxy_pass  http://127.0.0.1:8003;
+        	#解决跨域
+        	if ($request_method = 'OPTIONS') {
+					add_header 'Access-Control-Allow-Origin' '$http_origin';# http_origin 代表请求的origin
+					add_header 'Access-Control-Allow-Credentials' 'true'; #用于有cookie需要跨域，如果没cookie可以不用
+					add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+					#
+					# Custom headers and headers various browsers *should* be OK with but aren't
+					#
+					add_header 'Access-Control-Allow-Headers' 
+                    'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
+					#
+					# Tell client that this pre-flight info is valid for 20 days
+					#
+					add_header 'Access-Control-Max-Age' 1728000;
+					add_header 'Content-Type' 'text/plain charset=UTF-8';
+					add_header 'Content-Length' 0;
+					return 200;
+	        }
+            proxy_pass  http://hoper.xyz:8003;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Real-PORT $remote_port;
