--- a/test/rust/cmd/Cargo.toml
+++ b/test/rust/cmd/Cargo.toml
@@ -15,6 +15,8 @@ actix-rt = "0.2.2"
 futures = "0.1.25"
 cpp = "0.5.3"
 log = "0.4.7"
+rayon = "1.1.0"
+regex = "1.2.1"
 
 [build-dependencies]
 cpp_build = "0.5.3"
