--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -23,6 +23,7 @@
     "ant-design-vue": "^1.3.10",
     "cross-env": "^5.2.0",
     "koa": "^2.7.0",
+    "markdown-it": "^10.0.0",
     "mavon-editor": "^2.7.5",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.8.1",
